--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node ./bin/www.js",
     "dev": "nodemon -r dotenv/config ./bin/www.js",
     "dbcreatetable": "node -r dotenv/config ./db/scripts/createTable.js",
-    "dbpopulatetable": "node -r dotenv/config ./db/scripts/populateTable.js"
+    "dbpopulatetable": "node -r dotenv/config ./db/scripts/populateTable.js",
+    "dbdeletetable": "node -r dotenv/config ./db/scripts/deleteTasksTable.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
